--- a/02_css/tp/07_flexbox/exos-base/02/index.html
+++ b/02_css/tp/07_flexbox/exos-base/02/index.html
@@ -7,13 +7,15 @@
    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-   <div class="f1 container">1</div>
-   <div class="f2 container">2</div>
-   <div class="f3 container">3</div>
-   <div class="f4 container">4</div>
-   <div class="f5 container">5</div>
-   <div class="f6 container">6</div>
-   <div class="f7 container">7</div>
-   <div class="f8 container">8</div>
+   <div class="container">
+      <div class="f1 f">1</div>
+      <div class="f2 f">2</div>
+      <div class="f3 f">3</div>
+      <div class="f4 f">4</div>
+      <div class="f5 f">5</div>
+      <div class="f6 f">6</div>
+      <div class="f7 f">7</div>
+      <div class="f8 f">8</div>
+   </div>
 </body>
 </html>
