--- a/02_css/tp/07_flexbox/01_meubles/index.html
+++ b/02_css/tp/07_flexbox/01_meubles/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Meubles</title>
    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
    <div class="container">
       <header>
          <img src="assets/img/bonjour.png" class="bonjour">
          <nav>
             <ul class="txt">
-               <li>Accueil</li>
-               <li>Notre histoire</li>
-               <li>Contact</li>
+               <li><a href="">Accueil</a></li>
+               <li><a href="">Notre histoire</a></li>
+               <li><a href="">Contact</a></li>
             </ul>
          </nav>
       </header>
       <section class="chair-1">
          <img src="assets/img/chair-1.jpg" alt="Chaise blanche" class="chair">
          <div class="chair-txt">
+            <!-- Ici, utiliser <p> à la place de <h1> -->
             <h1>Oui.</h1>
             <p class="txt t-s t-c">BONJOUR - est désormais un revendeur de mobilier design.</p>
          </div>
       </section>
       <section class="fond bg-fond">
-         <h2 class="color">Notre histoire</h2>
-         <p class="txt color t-f t-s">BONJOUR - était une agence de communication qui s'est récemment tournée vers le mobilier car Sonny cherchait de l'inspiration pour une validation et est tombé sur des photos de chaises sympathiques sur Unsplash.</p>
+         <h2 class="color t-a">Notre histoire</h2>
+         <p class="txt color t-f t-s">BONJOUR - était une agence de communication qui s'est récemment tournée vers le
+            mobilier car Sonny cherchait de l'inspiration pour une validation et est tombé sur des photos de chaises
+            sympathiques sur Unsplash.</p>
       </section>
       <section class="chairs">
          <img src="assets/img/black.jpg" alt="Chaise noire de profil" class="black">
@@ -40,11 +45,12 @@
             <img src="assets/img/mcdo.png" alt="Logo McDonald" class="f-f">
             <img src="assets/img/kfc.png" alt="Logo KFC" class="kfc f-f">
             <img src="assets/img/bk.png" alt="Logo Burger King" class="f-f">
-         <!-- </div> -->
-         <!-- <div class="dom"> -->
+            <!-- </div> -->
+            <!-- <div class="dom"> -->
             <img src="assets/img/dominos.png" alt="Logo Dominos Pizza" class="dom f-f ">
-         </div>  
-         </footer>
+         </div>
+      </footer>
    </div>
 </body>
+
 </html>
