--- a/02_css/tp/07_flexbox/01_meubles/index.html
+++ b/02_css/tp/07_flexbox/01_meubles/index.html
@@ -11,13 +11,13 @@
 <body>
    <div class="container">
       <header>
-         <img src="assets/img/bonjour.png" class="bonjour">
          <nav>
-            <ul class="txt">
-               <li><a href="">Accueil</a></li>
-               <li><a href="">Notre histoire</a></li>
-               <li><a href="">Contact</a></li>
-            </ul>
+            <a href=""><img src="assets/img/bonjour.png" alt="Logo Bonjour"></a>
+            <div class="txt">
+               <a href="">Accueil</a></li>
+               <a href="">Notre histoire</a>
+               <a href="">Contact</a>
+            </div>
          </nav>
       </header>
       <section class="chair-1">
