--- a/02_css/tp/07_flexbox/03_happy/index.html
+++ b/02_css/tp/07_flexbox/03_happy/index.html
@@ -41,8 +41,10 @@
       <div >
          <h3 class="f-w">Happy Faces in your box</h3>
          <p>Freebies, updates and ressources to help you improve.</p>
-         <input type="email" name="email" id="email" placeholder="Email Address" >
-         <button type="submit" class="up f-w l-s">subscribe</button>
+         <form action="newsletter.php" method="post">
+            <input type="email" name="email" id="email" placeholder="Email Address" >
+            <button type="submit" class="up f-w l-s">subscribe</button>
+         </form>
       </div> 
    </footer>
 
