--- a/02_css/tp/07_flexbox/01_meubles/index.html
+++ b/02_css/tp/07_flexbox/01_meubles/index.html
@@ -9,46 +9,52 @@
 </head>
 
 <body>
-   <div class="container">
-      <header>
-         <nav>
-            <a href=""><img src="assets/img/bonjour.png" alt="Logo Bonjour"></a>
-            <div class="txt">
-               <a href="">Accueil</a></li>
-               <a href="">Notre histoire</a>
-               <a href="">Contact</a>
-            </div>
-         </nav>
-      </header>
-      <section class="chair-1">
-         <img src="assets/img/chair-1.jpg" alt="Chaise blanche" class="chair">
-         <div class="chair-txt">
-            <!-- Ici, utiliser <p> à la place de <h1> -->
-            <h1>Oui.</h1>
-            <p class="txt t-s t-c">BONJOUR - est désormais un revendeur de mobilier design.</p>
+
+   <header>
+      <nav class="d-flex">
+         <a href="#">
+            <img src="assets/img/bonjour.png" alt="Logo Bonjour">
+         </a>
+         <div class="txt">
+            <a href="#">Accueil</a></li>
+            <a href="#">Notre histoire</a>
+            <a href="#">Contact</a>
          </div>
-      </section>
-      <section class="fond bg-fond">
-         <h2 class="color t-a">Notre histoire</h2>
-         <p class="txt color t-f t-s">BONJOUR - était une agence de communication qui s'est récemment tournée vers le
-            mobilier car Sonny cherchait de l'inspiration pour une validation et est tombé sur des photos de chaises
-            sympathiques sur Unsplash.</p>
-      </section>
-      <section class="chairs">
-         <img src="assets/img/black.jpg" alt="Chaise noire de profil" class="black">
-         <img src="assets/img/tabouret.jpg" alt="Tabouret" class="tabouret">
-         <img src="assets/img/chair-2.jpg" alt="Chaise blanche sans accoudoir" class="chair-2">
-      </section>
-      <footer class="fond-2 bg-fond">
-         <h3 class="color center">Nos partenaires</h3>
-         <div class="logos">
-            <img src="assets/img/mcdo.png" alt="Logo McDonald" class="f-f">
-            <img src="assets/img/kfc.png" alt="Logo KFC" class="kfc f-f">
-            <img src="assets/img/bk.png" alt="Logo Burger King" class="f-f">
-            <img src="assets/img/dominos.png" alt="Logo Dominos Pizza" class="dom f-f ">
-         </div>
-      </footer>
-   </div>
+      </nav>
+   </header>
+
+   <section class="chair-1 d-flex">
+      <img src="assets/img/chair-1.jpg" alt="Chaise blanche" class="chair">
+      <div class="chair-txt d-flex">
+         <!-- Ici, utiliser <p> à la place de <h1> -->
+         <h1>Oui.</h1>
+         <p class="txt t-s t-c">BONJOUR - est désormais un revendeur de mobilier design.</p>
+      </div>
+   </section>
+
+   <section class="fond bg-fond">
+      <h2 class="color t-a">Notre histoire</h2>
+      <p class="txt color t-f t-s">BONJOUR - était une agence de communication qui s'est récemment tournée vers le
+         mobilier car Sonny cherchait de l'inspiration pour une validation et est tombé sur des photos de chaises
+         sympathiques sur Unsplash.</p>
+   </section>
+
+   <section class="chairs">
+      <img src="assets/img/black.jpg" alt="Chaise noire de profil" class="black">
+      <img src="assets/img/tabouret.jpg" alt="Tabouret" class="tabouret">
+      <img src="assets/img/chair-2.jpg" alt="Chaise blanche sans accoudoir" class="chair-2">
+   </section>
+
+   <footer class="fond-2 bg-fond">
+      <h3 class="color center">Nos partenaires</h3>
+      <div class="logos">
+         <img src="assets/img/mcdo.png" alt="Logo McDonald" class="f-f">
+         <img src="assets/img/kfc.png" alt="Logo KFC" class="kfc f-f">
+         <img src="assets/img/bk.png" alt="Logo Burger King" class="f-f">
+         <img src="assets/img/dominos.png" alt="Logo Dominos Pizza" class="dom f-f ">
+      </div>
+   </footer>
+
 </body>
 
 </html>
