--- a/02_css/tp/07_flexbox/04_bioware/index.html
+++ b/02_css/tp/07_flexbox/04_bioware/index.html
@@ -8,26 +8,30 @@
 </head>
 <body>
    
-   <header class="d-flex">
-      <a href="#">
-         <img src="assets/img/logo.png" alt="Logo BioWare">
-      </a>
-      <nav class=" d-flex up">
-         <a href="#" class="t-d">about</a>
-         <a href="#" class="t-d">games</a>
-         <a href="#" class="t-d">studios</a>
-         <a href="#" class="t-d">careers</a>
-         <a href="#" class="t-d">news</a>
-         <a href="#" class="t-d">products</a>
+   <header>
+      <nav class="d-flex">
+         <a href="#">
+            <img src="assets/img/logo.png" alt="Logo BioWare">
+         </a>
+         <div class=" d-flex up">
+            <a href="#" class="t-d">about</a>
+            <a href="#" class="t-d">games</a>
+            <a href="#" class="t-d">studios</a>
+            <a href="#" class="t-d">careers</a>
+            <a href="#" class="t-d">news</a>
+            <a href="#" class="t-d">products</a>
+         </div>
       </nav>
    </header>
 
    <main class="d-flex">
-      <p class="p1 up">create something amazing.</p>
-      <p class="p2 up">we're passionate about quality in our workplace and in our products.</p>
-      <button type="submit" id="discover" class="semi up">
-         <a href="#" class="t-d">discover our culture</a>
-      </button>
+      <div class="s-1">
+         <p class="p1 shadow up">create something amazing.</p>
+         <p class="p2 shadow up">we're passionate about quality in our workplace and in our products.</p>
+         <button type="submit" id="discover" class="semi up">
+            <a href="#" class="t-d">discover our culture</a>
+         </button>
+      </div>
    </main>
 
    <section class="d-flex">
@@ -41,27 +45,33 @@
    </section>
 
    <footer class="d-flex">
-      <div class="d-flex">
+      <nav class="d-flex">
+
          <div class="logos d-flex">
-            <img src="assets/img/ea-dark.png" alt="Logo EA" class="i1">
-            <img src="assets/img/bioware-dark.png" alt="Logo BioWare foncé" class="i-2">
+            <a href="#"><img src="assets/img/ea-dark.png" alt="Logo EA" class="i1"></a>
+            <a href="#"><img src="assets/img/bioware-dark.png" alt="Logo BioWare foncé" class="i2"></a>
          </div>
+
          <div class="links d-flex">
-            <ul>
-               <li><a href="#" class="color2 l-s semi t-d up">social</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">blog</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">twitter</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">instagram</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">facebook</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">youtube</a></li>
-            </ul>
-            <ul>
-               <li><a href="#" class="color2 l-s semi t-d up">store</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">games</a></li>
-               <li><a href="#" class="color1 l-s semi t-d">merchandise</a></li>
-            </ul>
+
+            <div class="l1 d-flex">
+               <h2 class="color2 l-s semi up">social</h2>
+               <a href="#" class="color1 l-s semi t-d">blog</a>
+               <a href="#" class="color1 l-s semi t-d">twitter</a>
+               <a href="#" class="color1 l-s semi t-d">instagram</a>
+               <a href="#" class="color1 l-s semi t-d">facebook</a>
+               <a href="#" class="color1 l-s semi t-d">youtube</a>
+            </div>
+
+            <div class="l2 d-flex">
+               <h2 href="#" class="color2 l-s semi up">store</h2>
+               <a href="#" class="color1 l-s semi t-d">games</a>
+               <a href="#" class="color1 l-s semi t-d">merchandise</a>
+            </div> 
+
          </div>
-      </div>
+
+      </nav>
    </footer>
 
 </body>
