--- a/02_css/tp/07_flexbox/01_meubles/index.html
+++ b/02_css/tp/07_flexbox/01_meubles/index.html
@@ -27,16 +27,18 @@
       <img src="assets/img/chair-1.jpg" alt="Chaise blanche" class="chair">
       <div class="chair-txt d-flex">
          <!-- Ici, utiliser <p> à la place de <h1> -->
-         <h1>Oui.</h1>
-         <p class="txt t-s t-c">BONJOUR - est désormais un revendeur de mobilier design.</p>
+         <h1 class="f-s">Oui.</h1>
+         <p class="txt">BONJOUR - est désormais un revendeur de mobilier design.</p>
       </div>
    </section>
 
    <section class="fond bg-fond">
-      <h2 class="color t-a">Notre histoire</h2>
-      <p class="txt color t-f t-s">BONJOUR - était une agence de communication qui s'est récemment tournée vers le
+      <h2 class="color f-s t-a">Notre histoire</h2>
+      <p class="txt color t-f">
+         BONJOUR - était une agence de communication qui s'est récemment tournée vers le
          mobilier car Sonny cherchait de l'inspiration pour une validation et est tombé sur des photos de chaises
-         sympathiques sur Unsplash.</p>
+         sympathiques sur Unsplash.
+      </p>
    </section>
 
    <section class="chairs">
