--- a/02_css/tp/07_flexbox/02_galery/index.html
+++ b/02_css/tp/07_flexbox/02_galery/index.html
@@ -10,25 +10,21 @@
    
    <div class="container">
 
-      <div class="d1">
-         <img src="assets/img/01.jpg" alt="Image de" class="img">
-         <img src="assets/img/02.jpg" alt="Image de" class="img">
-         <img src="assets/img/03.jpg" alt="Image de" class="img">
-         <img src="assets/img/04.jpg" alt="Image de" class="img">
-         <img src="assets/img/05.jpg" alt="Image de" class="img">
-         <img src="assets/img/06.jpg" alt="Image de" class="img">
-      </div>
-      <div class="d2">   
-         <img src="assets/img/07.jpg" alt="Image de" class="img">
-         <img src="assets/img/08.jpg" alt="Image de" class="img">
-         <img src="assets/img/09.jpg" alt="Image de" class="img">
-         <img src="assets/img/10.jpg" alt="Image de" class="img">
-         <img src="assets/img/11.jpg" alt="Image de" class="img">
-      </div>
-      <div class="d3">
-         <img src="assets/img/12.jpg" alt="Image de" class="img">
-         <img src="assets/img/13.jpg" alt="Image de" class="img">
-      </div>   
+
+      <img src="assets/img/01.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/02.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/03.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/04.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/05.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/06.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/07.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/08.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/09.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/10.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/11.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/12.jpg" alt="Image design" title="Image design">
+      <img src="assets/img/13.jpg" alt="Image design" title="Image design">
+
 
    </div>
 
